update Namespace and docs

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,6 +21,7 @@ export(conSpatial)
 export(conSummary)
 export(conTemporal)
 export(dcPlot)
+export(getSim)
 import(adehabitatLT)
 import(graphics)
 import(rgeos)
