--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,6 +24,7 @@ export(dcPlot)
 export(getSim)
 import(adehabitatLT)
 import(graphics)
+import(lubridate)
 import(rgeos)
 import(sp)
 import(stats)
